--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "puma-rs"
+name = "puma"
 version = "0.0.1"
 edition = "2021"
 description = "Triton-based inference engine focused on lightweight, high-performance for Serverless."
