--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ license = "Apache-2.0"
 
 clap = { version = "4.5.28", features = ["derive"] }
 prettytable-rs = "0.10"
+reqwest = { version = "0.12", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_derive = "1.0"
+env_logger = "0.11.6"
+log = "0.4.26"
