--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 env_logger = "0.11.6"
 log = "0.4.26"
+indicatif = "0.17.11"
